--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@ sudo service lullabot.com-www restart
           <h2>Useful links</h2>
           <ul>
             <li><a href="https://facebook.github.io/react/" target="_blank">React Docs</a></li>
-            <li><a href="http://docs.couchdb.org/en/1.6.1/" target="_blank"> Docs</a></li>
+            <li><a href="http://docs.couchdb.org/en/1.6.1/" target="_blank">CouchDB Docs</a></li>
             <li><a href="http://isomorphic.net" target="_blank">Isomorphic libraries</a></li>
           </ul>
         </section>
