Add video browsing the site

--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 
       <!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
-        <section>
-          <h1>Decoupling the CMS with React and CouchDB</h1>
-          <h3>DrupalCamp Spain 2015</h3>
-          <p>Juampy NR</p>
+        <section data-background-video="video/video.mp4" data-background-video-loop data-background-color="#000000">
+          <div style="background-color: rgba(0, 0, 0, 0.7); color: #fff; padding: 20px;">
+            <h2>Decoupling the CMS with React and CouchDB</h2>
+            <h3>DrupalCamp Spain 2015</h3>
+            <p>Juampy NR</p>
+          </div>
         </section>
 
         <section>
@@ -688,6 +690,12 @@ app.use('/mailchimp-signup', function(req, res) {
           <section data-background="images/jenkins.png">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
               <h2>Jenkins Jobs</h2>
+            </div>
+          </section>
+
+          <section data-background="images/jenkins-build.png">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+              <h2>How to deploy a tag</h2>
             </div>
           </section>
 
