Add article edit slide and video recording

--- a/index.html
+++ b/index.html
@@ -57,12 +57,6 @@
           <a href="http://about.me/juampynr" target="_blank">about.me/juampynr</a>
         </section>
 
-        <section data-background-video="video/video.mp4" data-background-color="#000000">
-          <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
-            <h2>The website</h2>
-          </div>
-        </section>
-
         <section data-background="images/syfy-case.png">
           <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
             <h2>The goal</h2>
@@ -81,6 +75,9 @@
               <li>Only anonymous navigation in the front end.</li>
             </ul>
           </div>
+        </section>
+
+        <section data-background-video="video/article-edit.mp4" data-background-video-loop data-background-color="#000000">
         </section>
 
         <section>
