Add video to demonstrate an isomorphic request

--- a/index.html
+++ b/index.html
@@ -414,6 +414,9 @@ app.use('/mailchimp-signup', function(req, res) {
         <section>
           <section data-background="images/isomorphic.jpg" data-background-size="700px">
           </section>
+
+          <section data-background-video="video/isomorphic_request.mp4" data-background-color="#000000">
+          </section>
         </section>
 
         <section>
@@ -504,11 +507,13 @@ sudo service lullabot.com-www restart
           <p>
             <img align="left" src="images/Juampy-headshot.jpg" width="200"/>
             <img align="right" src="images/lullabot.jpg" width="200"/>
-            Juampy NR<br>
-            <br>
-            <a href="https://twitter.com/juampynr" target="_blank">@juampynr</a><br>
-            <br>
+            <a href="https://twitter.com/juampynr" target="_blank">@juampynr</a>
+            <br/>
+            <br/>
             <a href="http://about.me/juampynr" target="_blank">about.me/juampynr</a>
+            <br/>
+            <br/>
+            Lullabot is looking for projects!
           </p>
         </section>
 
