Adjust title and remove typo

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
               <li>Data is exported to CouchDB on cron run.</li>
               <li>The front end fetches data from CouchDB's REST API.</li>
               <li>Only anonymous navigation in the front end.</li>
-              <li>Only anonymous navigation in the front end.</li>
               <li>Plus, writing the migration path.</li>
             </ul>
           </div>
@@ -422,7 +421,7 @@ app.use('/mailchimp-signup', function(req, res) {
         <section>
           <section data-background="images/jenkins.png">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
-              <h2>Jenkins Jobs</h2>
+              <h2>Deployments</h2>
             </div>
           </section>
 
