Link acknoledgements to their profiles

--- a/index.html
+++ b/index.html
@@ -503,8 +503,14 @@ sudo service lullabot.com-www restart
         </section>
         <section>
           <h2>Acknowledgements</h2>
-          <img src="images/jeff.jpg" />
-          <img src="images/sally.jpg" />
+          <div style="width:45%;float:left;">
+            <img align="left" src="images/jeff.jpg" />
+            <a href="https://www.lullabot.com/who-we-are/jeff-eaton" target="_blank">Jeff Eaton</a>
+          </div>
+          <div style="width:45%;float:left;">
+            <img align="right" src="images/sally.jpg" />
+            <a href="https://www.lullabot.com/who-we-are/sally-young" target="_blank">Sally Young</a>
+          </div>
         </section>
         <section>
           <h2>Thanks! Questions?</h2>
