Adjust slide titles

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ function lullabot_edit_article_lullabot_edit_exporter_node_article($node, $outpu
           </section>
 
           <section>
-            <h2>The article.jsx template (simplified)</h2>
+            <h2>The article.jsx component (simplified)</h2>
             <pre>
               <code class="javascript">
 // First we have declarations and dependencies being loaded.
@@ -264,12 +264,12 @@ module.exports = LayoutArticle;
 
           <section data-background="images/newsletter.png">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
-              <h2>The newsletter widget</h2>
+              <h2>The newsletter form</h2>
             </div>
           </section>
 
           <section>
-            <h2>Contact form template</h2>
+            <h2>The newsletter.jsx component</h2>
             <pre>
               <code class="javascript">
 'use strict';
